fixed dice image cropping; changed title in wordle.html

--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ footer {
 }
 
 img {
-    width: 150px;
-    height: 150px;
+    width: 170px;
+    height: 170px;
     padding: 1vw;
-    object-fit: cover;
+    object-fit: scale-down;
 }
 
 figure {
